--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,8 @@
 [submodule "vendor/glm"]
 	path = vendor/glm
 	url = https://github.com/g-truc/glm
+[submodule "vendor/imgui"]
+	path = vendor/imgui
+	url = https://github.com/Langwedocjusz/imgui
+	branch = master
+	update = rebase
