Better building for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ target_include_directories(${PROJECT_NAME} PUBLIC src)
 
 #Set current project as Visual Studio start project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+#Set Visual Studio Debugger working directory
+set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 
 #Add glfw
 add_subdirectory(vendor/glfw)
