First version of serialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,3 +68,5 @@ target_include_directories(${PROJECT_NAME} PUBLIC vendor/glm)
 #Add shader-include
 target_include_directories(${PROJECT_NAME} PUBLIC vendor/GLSL-Shader-Includes)
 
+#Add nlohmann json
+target_include_directories(${PROJECT_NAME} PUBLIC vendor/json/single_include)
